--- a/test.html
+++ b/test.html
@@ -157,8 +157,9 @@
     //   if(arr.length <= 1) {
     //     return arr
     //   }
-    //   let midIndex = arr.length / 2
-    //   let midValue = arr.splice(midIndex, 1)[0]
+    //   const result = []
+    //   const midIndex = arr.length / 2
+    //   const midValue = arr.splice(midIndex, 1)[0]
     //   const leftArr = []
     //   const rightArr = []
     //   for(let i = 0; i < arr.length; i++) {
@@ -255,8 +256,10 @@
     //   a: 1,
     //   b: 2,
     //   c: [1, 2, 3],
-    //   d: function() {
-    //     console.log('111')
+    //   d: {
+    //     d: {
+    //       d: this
+    //     }
     //   }
     // }
     // let result = deepClone(obj)
@@ -264,24 +267,13 @@
 
 
     //10.函数节流
-    // function throttle(callback, wait) {
+    // function throttle(cb, wait) {
     //   let start = 0
-    //   return function(e) {
+    //   return function() {
     //     let now = Date.now()
     //     if(now - start >= wait) {
-    //       callback.call(this, e)
+    //       cb.call(this)
     //       start = now
-    //     }
-    //   }
-    // }
-    // function throttle(callback, wait) {
-    //   let timer
-    //   return function(e) {
-    //     if(!timer) {
-    //       timer = setTimeout(() => {
-    //         timer = null
-    //         callback.call(this, e)
-    //       }, wait) 
     //     }
     //   }
     // }
@@ -349,6 +341,9 @@
     //     result = [].concat(...result)
     //   }
     //   return result
+    // }
+    // function flattern(arr) {
+    //   return arr.flat(Infinity)
     // }
     // console.log(flattern([2, 3, [4, 5], [6, [7, 1]], 8]))
 
@@ -532,8 +527,8 @@
 
 
     // 19.原生Ajax实现
-    // let xhr = new XHRHttpRequest()
-    // xhr.open('get', url)
+    // let xhr = new XMLHttpRequest()
+    // xhr.open(method, url, true)
     // xhr.onreadystatechange = function() {
     //   if(xhr.status == 200 && xhr.readystate == 4) {
     //     let result = xhr.responseText
@@ -556,7 +551,7 @@
     //     }
     //   }
     //   return obj
-    // } 
+    // }
     // console.log(parseUrl('http://www.qq.com?age=18&name=zzt&gender=male&score=99&score=100'))
 
 
@@ -688,7 +683,7 @@
   // p.getZhouchang()
 
 
-  // async function sleep(color, wait){
+  // function sleep(color, wait){
   //   return new Promise((resolve, reject)=>{
   //     console.log(color)
   //     setTimeout(() => {
@@ -703,6 +698,46 @@
   //   await light()
   // }
   // light()
+ 
+
+  // 手写Promise.all
+  function all(arr) {
+    return new Promise((resolve, reject) => {
+      let length = arr.length // 传入的promise的个数
+      let count = 0 // 传入fullfilled的promise个数
+      const result = []
+      // 空数组，返回一个fullfilled状态的promise
+      if(arr.length === 0) {
+        return Promise.resolve(arr)
+      }
+      for(let i = 0; i < arr.length; i++) {
+        arr[i].then(res => {
+          result.push(res)
+          count++
+          // 是否所有的promise都进入fullfilled状态
+          if(count === length) {
+            return resolve(result) // 返回结果
+          }
+        }).catch(e => {
+          reject(e) // 有错误则直接结束循环，并返回错误
+        })
+      }
+    })
+  }
+
+
+  // 手写Promise.race
+  function race(arr) {
+    return new Promise((resolve, reject) => {
+      for(let i = 0; i < arr.length; i++) {
+        arr[i].then(res => {
+          resolve(res) // 某一promise完成后直接返回其值
+        }).catch(e => {
+          reject(e)
+        })
+      }
+    })
+  }
   </script>
 </body>
 
